Convert VW to % in body width (may fix issue on tablet)

--- a/app/globals.css
+++ b/app/globals.css
@@ -70,7 +70,7 @@ body {
   background-color: var(--background) !important;
   color: #fff !important;
   text-align: center;
-  max-width: 100vw;
+  max-width: 100%;
   overflow-x: hidden;
   padding-bottom: 6rem !important;
 }
